--- a/js/testingvue/index.html
+++ b/js/testingvue/index.html
@@ -11,8 +11,15 @@
     <div id="app">
         <h1>{{titulo}}</h1>
         <h2>{{subtitulo}}</h2>
+        <p v-if="show">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit amet libero ea doloremque ullam molestiae, deserunt sit commodi veritatis vero nobis soluta neque nesciunt voluptatum nisi perferendis eos? Repellat, rem!</p>
+
+        <ul>
+            <li v-for="nombre in nombres">
+                {{nombre}}
+            </li>
+        </ul>
     </div>
-    <button id="btn-ok">cambiar</button>
+    <button type="button"  id="btn-ok">cambiar</button>
     <script src="index.js"></script>
 </body>
 </html>
